fix: scope workflow runtime authorization